# verify-redact-cli

./: .gitignore  LICENSE.md  README.md  pyproject.toml  run-samples.bat
docs/: SAMPLES.md
samples/: denylist.txt
src/: __init__.py  __main__.py  cli.py  core.py  denylist.py  extractors.py  report.py
